# ERT2020GS

./: .cproject  .gitignore  .project  CMakeLists.txt  CMakeListsQt.txt  ERTGS.sh  Makefile  README.md  pull.sh  pullForce.sh  run.sh
Logger/: CMakeLists.txt  Double_buffer.cpp  Double_buffer.h  Loggable.h  Logger.cpp  Logger.h  Logger_buffer.cpp  Logger_buffer.h  double_buffer.cpp  double_buffer.h  intermediary_queue.cpp  intermediary_queue.h  log_buffer.cpp  log_buffer.h  loggable.h  logger.cpp  logger.h  utilities.cpp  utilities.h
Objects/: CMakeLists.txt
Objects/DataStructures/: GPS.cpp  GPS.h  IgnitionData.h  Picture.h  PressureData.h
Objects/RFmodem/: LoRa.cpp  LoRa.h  XBee.h
Objects/Serializer/: DataHandler.cpp  DataHandler.h  Packet.h
RF-UI-Interface/: CMakeLists.txt  ProtocolDefine.h  connector.cpp  connector.h
Telecom/: CMakeLists.txt
Telecom/DataHandler/: DataHandler.cpp  DataHandler.h  Datagram.cpp  Datagram.h  DatagramTypes.h  PacketTypes.h  Worker.cpp  Worker.h
Telecom/DataStructures/: CRC.cpp  CRC.h  CtrlGPIO.cpp  CtrlGPIO.h  Data.h  DataHandler.cpp  DataHandler.h  GPS.cpp  GPS.h  Header.cpp  Header.h  IgnitionData.cpp  IgnitionData.h  MyData.cpp  MyData.h  PacketType.cpp  PacketType.h  Picture.cpp  Picture.h  PressureData.cpp  PressureData.h  States.cpp  States.h  String.cpp  String.h  Template.cpp  Template.h  XbeeOptions.cpp  XbeeOptions.h
Telecom/DataStructures/Avionics/: GPS.cpp  GPS.h  IgnitionData.cpp  IgnitionData.h  StateValues.h  StatusAV.cpp  StatusAV.h  TVCCommand.cpp  TVCCommand.h  TVCCommands.h  TVCStatus.cpp  TVCStatus.h  TVCStatusValue.h  Telemetry.cpp  Telemetry.h
Telecom/DataStructures/Basic/: BasicData.cpp  BasicData.h  SensorData.cpp  SensorData.h  String.h
Telecom/DataStructures/File/: File.cpp  File.h  FileTransmissionStates.h  Picture.cpp  Picture.h
Telecom/DataStructures/FrameInfo/: ACK.cpp  ACK.h  ACKManager.cpp  ACKManager.h  CRC.cpp  CRC.h  Header.cpp  Header.h  XbeeOptions.cpp  XbeeOptions.h
Telecom/DataStructures/GSE/: GSEOrder.cpp  GSEOrder.h  GSEOrderValue.h  GSEOrderValues.h  GSEPing.cpp  GSEPing.h  GSESensors.cpp  GSESensors.h  IgnitionCode.cpp  IgnitionCode.h  IgnitionStates.h
Telecom/DataStructures/Payload/: PLGps.cpp  PLGps.h  PLOrder.cpp  PLOrder.h  PLOrderValues.h  PLStateValues.h  PLStatus.cpp  PLStatus.h  PLTemperature.cpp  PLTemperature.h  PL_BME.cpp  PL_BME.h  PL_BNO.cpp  PL_BNO.h  StatusPL.cpp  StatusPL.h
Telecom/DataStructures/Propulsion/: IgnitionCode.cpp  IgnitionCode.h  IgnitionStates.h  PPCommand.cpp  PPCommand.h  PPCommands.h  PPData.cpp  PPData.h  PPPressure.cpp  PPPressure.h
Telecom/DataStructures/Test/: CtrlGPIO.cpp  CtrlGPIO.h  Picture.cpp  Picture.h  PressureData.cpp  PressureData.h  States.cpp  States.h  String.cpp  String.h
Telecom/RFmodem/: LoRa.cpp  LoRa.h  RFmodem.h  XBee.cpp  XBee.h  Xbee.cpp  Xbee.h
Telecom/RFmodem/lib/RadioHead/: CMakeLists.txt
Telecom/RFmodem/lib/RadioHead/examples/raspi/: RasPiRH.cpp
Telecom/RFmodem/lib/serial/: CMakeLists.txt.ddl
Telecom/RFmodem/lib/serial/src/: serial.cc
Telecom/RFmodem/lib/serial/src/impl/: unix.cc  win.cc
Telecom/RFmodem/lib/serial2/include/serial/: serial.h
Telecom/Serializer/: Packet.cpp  Packet.h
Telecom/Worker/: Worker.cpp  Worker.h
UI/: CMakeLists.txt  Chart.cpp  Chart.h  GraphWindow.cpp  GraphWindow.h  GuiWindow.cpp  GuiWindow.h  Gui_message.cpp  Gui_message.h  QTProject.pro  SecondWindow.cpp  SecondWindow.h  Terminal.cpp  Terminal.h  TerminalWindow.cpp  TerminalWindow.h  assets.qrc  asstes.qrc  codestyle.cfg  committer.sh  connector.cpp  connector.h  gpswindow.cpp  gpswindow.h  gui_logger.cpp  gui_logger.h  gui_message.cpp  gui_message.h  gui_test.cc  logger_tests.cc  logger_tests.cpp  logo.qrc  main.cc  puller.sh  pusher.sh  second_ui.h  ui_form.h  uibackup.h  utilities.h
UI/ui_file/: LioTest.ui  MainGUI.ui  WasserfallenGUI.ui  press_alt.ui  second_window.ui
archive/: ClassPacket.cpp  packet.cpp  packetsave.cpp
build-QTProject-Desktop-Debug/: Makefile  QTProject  moc_GuiWindow.cpp  qrc_logo.cpp
doc/: Doxyfile  XbeeGS2020config.xpro
doc/archive/: ClassPacket.cpp  GST.cpp  GSTsave.cpp  GUI.cpp  main.cpp  packetsave2.cpp  test_gpsmm.cpp
doc/archive/LoRa exe/: GSE.cpp  GST.cpp  LoRaTest.cpp  TxRx.cpp
doc/html/: _a_c_k_8cpp.html  _a_c_k_8cpp__incl.map  _a_c_k_8cpp__incl.md5  _a_c_k_8cpp_source.html  _a_c_k_8h.html  _a_c_k_8h__dep__incl.map  _a_c_k_8h__dep__incl.md5  _a_c_k_8h__incl.map  _a_c_k_8h__incl.md5  _a_c_k_8h_source.html  _a_c_k_manager_8cpp.html  _a_c_k_manager_8cpp__incl.map  _a_c_k_manager_8cpp__incl.md5  _a_c_k_manager_8cpp_source.html  _a_c_k_manager_8h.html  _a_c_k_manager_8h__dep__incl.map  _a_c_k_manager_8h__dep__incl.md5  _a_c_k_manager_8h__incl.map  _a_c_k_manager_8h__incl.md5  _a_c_k_manager_8h_source.html  _a_vsimulator_8cpp.html  _a_vsimulator_8cpp.js  _a_vsimulator_8cpp__incl.map  _a_vsimulator_8cpp__incl.md5  _a_vsimulator_8cpp_source.html  _basic_data_8cpp.html  _basic_data_8cpp__incl.map  _basic_data_8cpp__incl.md5  _basic_data_8cpp_source.html  _basic_data_8h.html  _basic_data_8h__dep__incl.map  _basic_data_8h__dep__incl.md5  _basic_data_8h__incl.map  _basic_data_8h__incl.md5  _basic_data_8h_source.html  _c_r_c_8cpp.html  _c_r_c_8cpp.js  _c_r_c_8cpp__incl.map  _c_r_c_8cpp__incl.md5  _c_r_c_8cpp_source.html  (+2574 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  (+146 more)
lib/RadioHead/: CMakeLists.txt
lib/serial/: CMakeLists.txt
src/: AVsimulator.cpp  Data.h  DataHandler.cpp  DataHandler.h  ERT2020GS.cpp  FancyGUI.cpp  GPS.cpp  GPS.h  GSE.cpp  GSE_PLsimu.cpp  GST.cpp  GSTV2.cpp  GUI.cpp  IgniterRPi.cpp  IgnitionData.cpp  IgnitionData.h  Image.cpp  Image.h  ImageCom.cpp  LoRa.cpp  LoRa.h  LoRaTest.cpp  Packet.cpp  Packet.h  PacketXTest.cpp  Picture.h  PressureData.cpp  PressureData.h  SerialTest.cpp  States.cpp  States.h  TestDebug.cpp  TxRx.cpp  TxRx2.cpp  XBee.cpp  XBee.h  XbeeTest.cpp  main.cpp  maxAlt.cpp  run.sh
ui/: CMakeLists.txt  QTProject.pro  autoBuild.sh  gpswindow.cpp  main.cpp  ui_form.h
